src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/prederr1.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/prederr1.iml:3:20: error: ')' expected
    assert (a == b == c);
                   ^

